--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             background-color: #f8fafc; padding: 12px; font-size: 0.75rem; font-weight: 700;
             color: #64748b; text-transform: uppercase; text-align: center; border-bottom: 1px solid #e2e8f0;
         }
+        /* FIX: Force left align for headers with .text-left class to override the center alignment above */
+        .rating-table th.text-left { text-align: left; }
+
         .rating-table td { padding: 12px 16px; border-bottom: 1px solid #f1f5f9; vertical-align: middle; }
         .rating-table tr:last-child td { border-bottom: none; }
         .rating-topic { font-weight: 500; color: #334155; min-width: 150px; }
@@ -506,7 +509,7 @@
                                                 <th class="text-left pl-4">หัวข้อประเมิน (ทักษะ)</th>
                                                 <th width="60">1<br><span class="font-normal text-[10px]">แย่</span></th>
                                                 <th width="60">2<br><span class="font-normal text-[10px]">พอใช้</span></th>
-                                                <th width="60">3<br><span class="font-normal text-[10px]">ปานกลาง</span></th>
+                                                <th width="60">3<br><span class="font-normal text-[10px]">เฉยๆ</span></th>
                                                 <th width="60">4<br><span class="font-normal text-[10px]">ดี</span></th>
                                                 <th width="60">5<br><span class="font-normal text-[10px]">ดีมาก</span></th>
                                             </tr>
@@ -538,7 +541,11 @@
                                         <thead>
                                             <tr>
                                                 <th class="text-left pl-4">ผลิตภัณฑ์</th>
-                                                <th width="60">1</th><th width="60">2</th><th width="60">3</th><th width="60">4</th><th width="60">5</th>
+                                                <th width="60">1<br><span class="font-normal text-[10px]">แย่</span></th>
+                                                <th width="60">2<br><span class="font-normal text-[10px]">พอใช้</span></th>
+                                                <th width="60">3<br><span class="font-normal text-[10px]">เฉยๆ</span></th>
+                                                <th width="60">4<br><span class="font-normal text-[10px]">ดี</span></th>
+                                                <th width="60">5<br><span class="font-normal text-[10px]">ดีมาก</span></th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -592,7 +599,11 @@
                                         <thead>
                                             <tr>
                                                 <th class="text-left pl-4">พื้นที่ตรวจสอบ</th>
-                                                <th width="60">1</th><th width="60">2</th><th width="60">3</th><th width="60">4</th><th width="60">5</th>
+                                                <th width="60">1<br><span class="font-normal text-[10px]">แย่</span></th>
+                                                <th width="60">2<br><span class="font-normal text-[10px]">พอใช้</span></th>
+                                                <th width="60">3<br><span class="font-normal text-[10px]">เฉยๆ</span></th>
+                                                <th width="60">4<br><span class="font-normal text-[10px]">ดี</span></th>
+                                                <th width="60">5<br><span class="font-normal text-[10px]">ดีมาก</span></th>
                                             </tr>
                                         </thead>
                                         <tbody>
